# storch

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  main.c  test
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  convex_2d.c  least_squares.c  log_reg.c
include/scorch/: graph.h  scorch.h  tensor.h
include/storch/: storch.h  tensor.h
src/: CMakeLists.txt  arena.c  arena.h  graph.c  graph.h  operations.h  ops.c  ops.h  scorch.c  scorch.h  storch.c  tensor.c
tests/: CMakeLists.txt  backward_G_Diff.c  backward_G_Div.c  backward_G_Exp.c  backward_G_Log.c  backward_G_MatMul.c  backward_G_Minus.c  backward_G_Parameter.c  backward_G_Pow.c  backward_G_Product.c  backward_G_Sum.c  backward_G_SumReduce.c  backward_G_Value.c  check.c  check_backward.h  check_forward.h  check_graphs.h  common.h  forward_G_Diff.c  forward_G_Div.h  forward_G_Exp.c  forward_G_Log.c  forward_G_MatMul.c  forward_G_Minus.c  forward_G_Pow.c  forward_G_Product.c  forward_G_Sum.c  forward_G_SumReduce.c  forward_G_Value.c  graph_integrations.c  tensor_T_BroadcastAdd.c  tensor_T_Build.c  tensor_T_Copy.c  tensor_T_Diff.c  tensor_T_Div.c  tensor_T_Exp.c  tensor_T_Full.c  tensor_T_GEMM.c  tensor_T_GetSetItem.c  tensor_T_Log.c  (+11 more)
tests/old/: check_backward.h  check_forward.h
